# OrderFerry

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup-host.ps1
.github/workflows/: ci.yml
src/orderferry/: __init__.py  __main__.py  app.py  protocol.py  responses.py  runtime.py  serialization.py  server.py  trading.py
tests/: test_bridge_server.py  test_mt5_runtime.py  test_protocol.py  test_serialization.py  test_service_startup.py  test_trading.py
